{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 36,
  "lineage": "cbddf9a4-0bd1-97ee-b5e7-0c6cb3b9cae8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "broken_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01811d4912b4ccb26",
            "arn": "arn:aws:ec2:ap-southeast-1:068858795199:instance/i-003cab96d4627b960",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003cab96d4627b960",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "postgres-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-028b2c8ca58d25b65"
              }
            ],
            "primary_network_interface_id": "eni-028b2c8ca58d25b65",
            "private_dns": "ip-10-0-1-77.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-47-128-71-125.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.128.71.125",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dd99f4c756d2e983",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01633287145bea11d",
            "tags": {
              "Name": "cts-01-broken-compute-node"
            },
            "tags_all": {
              "Name": "cts-01-broken-compute-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf839dd960eb1374"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "i-003cab96d4627b960",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.public_a",
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068858795199:internet-gateway/igw-05a6fba26883beaee",
            "id": "igw-05a6fba26883beaee",
            "owner_id": "068858795199",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-0dc3c71fec1550dc9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "igw-05a6fba26883beaee",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:loadbalancer/app/cts-01-routing-proxy/555702c468171899",
            "arn_suffix": "app/cts-01-routing-proxy/555702c468171899",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cts-01-routing-proxy-911450682.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:loadbalancer/app/cts-01-routing-proxy/555702c468171899",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cts-01-routing-proxy",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-0739893fa471bcad9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01633287145bea11d"
              },
              {
                "subnet_id": "subnet-08a3906dd20ed1a0d"
              }
            ],
            "subnets": [
              "subnet-01633287145bea11d",
              "subnet-08a3906dd20ed1a0d"
            ],
            "vpc_id": "vpc-0dc3c71fec1550dc9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:loadbalancer/app/cts-01-routing-proxy/555702c468171899"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:listener/app/cts-01-routing-proxy/555702c468171899/e41e0255fff88b0b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:targetgroup/cts-01-target-group/7fdd57cfa1a97704",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:listener/app/cts-01-routing-proxy/555702c468171899/e41e0255fff88b0b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:loadbalancer/app/cts-01-routing-proxy/555702c468171899",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:listener/app/cts-01-routing-proxy/555702c468171899/e41e0255fff88b0b"
          },
          "dependencies": [
            "aws_lb.external_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:targetgroup/cts-01-target-group/7fdd57cfa1a97704",
            "arn_suffix": "targetgroup/cts-01-target-group/7fdd57cfa1a97704",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:targetgroup/cts-01-target-group/7fdd57cfa1a97704",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:loadbalancer/app/cts-01-routing-proxy/555702c468171899"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cts-01-target-group",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc3c71fec1550dc9"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:targetgroup/cts-01-target-group/7fdd57cfa1a97704"
          },
          "dependencies": [
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:targetgroup/cts-01-target-group/7fdd57cfa1a97704,i-003cab96d4627b960,5000",
            "port": 5000,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:targetgroup/cts-01-target-group/7fdd57cfa1a97704",
            "target_id": "i-003cab96d4627b960"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "port": 5000,
            "region": "ap-southeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:068858795199:targetgroup/cts-01-target-group/7fdd57cfa1a97704",
            "target_id": "i-003cab96d4627b960"
          },
          "dependencies": [
            "aws_instance.broken_target",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.instance_sg",
            "aws_subnet.public_a",
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068858795199:route-table/rtb-0673c581f2d0bb4f6",
            "id": "rtb-0673c581f2d0bb4f6",
            "owner_id": "068858795199",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a6fba26883beaee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc3c71fec1550dc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "rtb-0673c581f2d0bb4f6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0994f64ab77102797",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0673c581f2d0bb4f6",
            "subnet_id": "subnet-01633287145bea11d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "rtbassoc-0994f64ab77102797",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e47581c7f5f4967",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0673c581f2d0bb4f6",
            "subnet_id": "subnet-08a3906dd20ed1a0d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "rtbassoc-08e47581c7f5f4967",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068858795199:security-group/sg-0739893fa471bcad9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0739893fa471bcad9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cts-01-alb-sg",
            "name_prefix": "",
            "owner_id": "068858795199",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc3c71fec1550dc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "sg-0739893fa471bcad9",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068858795199:security-group/sg-0cf839dd960eb1374",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf839dd960eb1374",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0739893fa471bcad9"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "cts-01-instance-sg",
            "name_prefix": "",
            "owner_id": "068858795199",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc3c71fec1550dc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "sg-0cf839dd960eb1374",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068858795199:subnet/subnet-01633287145bea11d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01633287145bea11d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068858795199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cts-01-public-subnet-a"
            },
            "tags_all": {
              "Name": "cts-01-public-subnet-a"
            },
            "vpc_id": "vpc-0dc3c71fec1550dc9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "subnet-01633287145bea11d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068858795199:subnet/subnet-08a3906dd20ed1a0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a3906dd20ed1a0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068858795199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cts-01-public-subnet-b"
            },
            "tags_all": {
              "Name": "cts-01-public-subnet-b"
            },
            "vpc_id": "vpc-0dc3c71fec1550dc9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "subnet-08a3906dd20ed1a0d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.chaos_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chaos_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:068858795199:vpc/vpc-0dc3c71fec1550dc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a927983176d56e5",
            "default_route_table_id": "rtb-005ceda583f7657e0",
            "default_security_group_id": "sg-0277d0ab12fdf0f1f",
            "dhcp_options_id": "dopt-0877665502a1af0ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc3c71fec1550dc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005ceda583f7657e0",
            "owner_id": "068858795199",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "cts-01-chaos-vpc"
            },
            "tags_all": {
              "Name": "cts-01-chaos-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "068858795199",
            "id": "vpc-0dc3c71fec1550dc9",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}